# font-toolkit

./: .eslintignore  .eslintrc.yml  .gitignore  .npmignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Readme.md  build.rs  index.d.ts  index.js  node.js  node.mjs  package.json  tsconfig.json
.github/workflows/: CI.yaml  lint.yaml
__test__/: wasm.spec.ts
examples/: basic.js  node.mjs
src/: bindings.rs  conv.rs  error.rs  font.rs  lib.rs  metrics.rs  ras.rs  wasm.rs  wit.rs
src/conv/: woff.rs  woff2.rs
src/metrics/: arabic.rs  compose.rs
tests/: basic.rs
wit/: world.wit
