[package]
name = "fontkit"
version = "0.3.0-beta.2"
edition = "2021"
authors = ["Zimon Dai <daizhuoxian@gmail.com>"]
description = "A simple library for font loading and indexing"
repository = "https://github.com/alibaba/font-toolkit"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ab_glyph_rasterizer = { version = "0.1.5", optional = true }
arc-swap = "1.5.0"
brotli-decompressor = { version = "2.3.2", optional = true }
byteorder = { version = "1.4.3", optional = true }
dashmap = { version = "5.3.4", optional = true }
flate2 = { version = "1.0.22", optional = true }
fontdb = { version = "0.9.1", optional = true }
infer = { version = "0.9.0", git = "https://github.com/zimond/infer" }
log = "0.4.17"
ouroboros = "0.14.2"
pathfinder_content = { version = "0.5.0", optional = true }
pathfinder_geometry = { version = "0.5.1", optional = true }
pathfinder_simd = { version = "0.5.1", optional = true, features = [
    "pf-no-simd",
] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
textwrap = { version = "0.15.0", optional = true, default-features = false, features = [
    "smawk",
    "unicode-linebreak",
] }
thiserror = "1.0.30"
ttf-parser = "0.17.1"
unicode-bidi = { version = "0.3.7", optional = true }
unicode-normalization = { version = "0.1.19", optional = true }
unicode-script = { version = "0.5.4", optional = true }
usvg = { version = "0.22.0", optional = true }
# wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.2.0", optional = true }
woff2 = { git = "https://github.com/zimond/woff2-rs", rev = "d3d93ea", optional = true, version = "0.3.0" }

[target.'cfg(not(all(target_os = "unknown", target_arch = "wasm32")))'.dependencies]
walkdir = "2.3.1"
console_error_panic_hook = "0.1.7"

[target.'cfg(all(target_os = "unknown", target_arch = "wasm32"))'.dependencies]
wasm-bindgen = "0.2.79"
js-sys = "0.3.56"

[features]
default = ["woff", "woff2", "fontdb", "metrics", "ras", "dashmap"]
woff = ["byteorder", "flate2"]
metrics = [
    "unicode-bidi",
    "unicode-normalization",
    "unicode-script",
    "textwrap",
]
ras = [
    "ab_glyph_rasterizer",
    "pathfinder_content",
    "pathfinder_geometry",
    "pathfinder_simd",
    "usvg",
]
# wit = ["wit-bindgen-rust", "dashmap"]

[build-dependencies]
cfg_aliases = "0.1.1"
