[package]
name = "fontkit"
version = "0.5.0-beta.2"
edition = "2021"
authors = ["Zimon Dai <daizhuoxian@gmail.com>"]
description = "A simple library for font loading and indexing"
repository = "https://github.com/alibaba/font-toolkit"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.component]
package = "alibaba:fontkit"

[dependencies]
wit-bindgen-rt = "0.24.0"
ab_glyph_rasterizer = { version = "0.1.5", optional = true }
arc-swap = "1.6.0"
brotli-decompressor = { version = "2.3.2", optional = true }
byteorder = { version = "1.4.3", optional = true }
dashmap = "5.3.4"
flate2 = { version = "1.0.22", optional = true }
log = "0.4.17"
ordered-float = "3.9.1"
ouroboros = "0.17.0"
pathfinder_content = { version = "0.5.0", optional = true }
pathfinder_geometry = { version = "0.5.1", optional = true }
pathfinder_simd = { version = "0.5.2", optional = true, features = [
    "pf-no-simd",
] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
textwrap = { version = "0.15.0", optional = true, default-features = false, features = [
    "smawk",
    "unicode-linebreak",
] }
thiserror = "1.0.30"
tiny-skia-path = "0.11.1"
tsify = "0.4.5"
ttf-parser = "0.19.1"
unicode-bidi = { version = "0.3.7", optional = true }
unicode-normalization = { version = "0.1.19", optional = true }
unicode-script = { version = "0.5.4", optional = true }
# wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.2.0", optional = true }
woff2 = { git = "https://github.com/zimond/woff2-rs", rev = "0e25872", optional = true, version = "0.3.0" }

[features]
default = ["woff", "woff2", "metrics", "ras"]
woff = ["byteorder", "flate2"]
metrics = [
    "unicode-bidi",
    "unicode-normalization",
    "unicode-script",
    "textwrap",
]
ras = [
    "ab_glyph_rasterizer",
    "pathfinder_content",
    "pathfinder_geometry",
    "pathfinder_simd",
]
optimize_stroke_broken = []
# wit = ["wit-bindgen-rust", "dashmap"]
