[package]
name = "fontkit"
version = "0.6.0-beta.8"
edition = "2021"
authors = ["Zimon Dai <daizhuoxian@gmail.com>"]
description = "A simple library for font loading and indexing"
repository = "https://github.com/alibaba/font-toolkit"
license = "MIT OR Apache-2.0"
readme = "Readme.md"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.component]
package = "alibaba:fontkit"

[package.metadata.component.bindings]
derives = ["Clone", "Hash", "PartialEq", "PartialOrd", "Eq", "Default"]
with = { "alibaba:fontkit/commons" = "crate::font" }

[dependencies]
ab_glyph_rasterizer = { version = "0.1.5", optional = true }
arc-swap = "1.6.0"
brotli-decompressor = { version = "2.3.2", optional = true }
byteorder = { version = "1.4.3", optional = true }
dashmap = "5.3.4"
flate2 = { version = "1.0.22", optional = true }
log = "0.4.17"
ordered-float = { version = "3.9.1", optional = true }
ouroboros = "0.17.0"
pathfinder_content = { version = "0.5.0", optional = true }
pathfinder_geometry = { version = "0.5.1", optional = true }
pathfinder_simd = { version = "0.5.2", optional = true, features = [
    "pf-no-simd",
] }
textwrap = { version = "0.16.1", optional = true, default-features = false, features = [
    "smawk",
    "unicode-linebreak",
] }
thiserror = "1.0.30"
tiny-skia-path = "0.11.1"
ttf-parser = "0.21.1"
unicode-bidi = { version = "0.3.7", optional = true }
unicode-normalization = { version = "0.1.19", optional = true }
unicode-script = { version = "0.5.4", optional = true }
woff2-patched = { version = "0.3.0", optional = true }
png = { version = "0.17.13", optional = true }
fast_image_resize = { version = "3.0.4", optional = true, features = [
    "only_u8x4",
] }
inflections = "1.1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen-rt = { version = "0.24.0", optional = true }

[features]
default = ["parse", "metrics", "ras", "wit"]
parse = ["byteorder", "flate2", "woff2-patched", "ordered-float"]
metrics = [
    "unicode-bidi",
    "unicode-normalization",
    "unicode-script",
    "textwrap",
]
ras = [
    "ab_glyph_rasterizer",
    "pathfinder_content",
    "pathfinder_geometry",
    "pathfinder_simd",
    "png",
    "fast_image_resize",
]
optimize_stroke_broken = []
wit = ["wit-bindgen-rt"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[patch.crates-io]
pathfinder_simd = { git = "https://github.com/pbdeuchler/pathfinder", branch = "patch-1" }
